Full draft + edits

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,4 +1,4 @@
-\chapter{Numerical Implementation of Neutronics Solvers on Python} \label{chap:implementation}
+\chapter{Numerical Implementation of Neutronics Solvers in Python} \label{chap:implementation}
 
 In Section \ref{sec:diffusion-correction}, I presented the theoretical basis for the hybrid
 $S_N$-diffusion method with diffusion correction terms. This section presents numerical
