--- a/bibliography.bib
+++ b/bibliography.bib
@@ -450,10 +450,12 @@
 	file = {arfc/moltres\: Repository for Moltres, a code for simulating Molten Salt Reactors:C\:\\Users\\Sun Myung\\Zotero\\storage\\WGEZI8WJ\\moltres.html:text/html},
 }
 
-@book{prince_zero-power_1968,
+@techreport{prince_zero-power_1968,
 	title = {{ZERO}-{POWER} {PHYSICS} {EXPERIMENTS} {ON} {THE} {MOLTEN}-{SALT} {REACTOR} {EXPERIMENT}.},
+	number = {ORNL-4233},
+	institution = {Oak Ridge National Laboratory (ORNL)},
 	author = {Prince, B.E. and Ball, S.J. and Engel, J.R. and Haubenreich, P.N. and Kerlin, T.W.},
-	month = jan,
+	month = feb,
 	year = {1968},
 	file = {ORNL-4233.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\7UTAGB2T\\ORNL-4233.pdf:application/pdf},
 }
@@ -2961,7 +2963,6 @@ computer memory, time requirements, and accuracy},
 	address = {Lemont, IL},
 	title = {{COMPUTING} {CONTROL} {ROD} {WORTHS} {IN} {THERMAL} {RESEARCH} {REACTORS}},
 	abstract = {Simple diffusion theory cannot be used to evaluate control rod worths in thermal reactors because of steep flux gradients that occur within the absorber material. However, reliable control rod worths can be calculated within the framework of diffusion theory if the control material is characterized by a set of mesh-dependent effective diffusion parameters or if group-dependent current-to-flux ratios are specified on the absorber surface.},
-	language = {en},
 	number = {ANL/RERTR/TM-5},
 	institution = {Argonne National Laboratory (ANL)},
 	author = {Bretscher, M M},
@@ -4193,4 +4194,28 @@ INIS Reference Number: 47042668},
 	month = dec,
 	year = {1972},
 	file = {IEngeI - ZE 1 2 8-P0WE R EXP E RIMEWTS WITH 233UIN THE MSRE.pdf:C\:\\Users\\Sun Myung\\Zotero\\storage\\IJW2XHES\\IEngeI - ZE 1 2 8-P0WE R EXP E RIMEWTS WITH 233UIN THE MSRE.pdf:application/pdf},
+}
+
+@article{ji_numerical_2024,
+	title = {Numerical investigation on the {Multi}-{Physics} coupling characteristics of {Lead}-{Bismuth} reactor fuel assembly based on oxidation corrosion behaviors},
+	volume = {428},
+	issn = {0029-5493},
+	url = {https://www.sciencedirect.com/science/article/pii/S0029549324006198},
+	doi = {10.1016/j.nucengdes.2024.113519},
+	abstract = {Adding oxygen into the lead-cooled fast reactor (LFR) to generate a protective oxide layer is one of the most promising methods to mitigate the corrosion of structural materials caused by flowing lead-based coolants such as lead–bismuth eutectic (LBE). In LFRs, the growth-removal behavior of the protective oxide layer is influenced by various factors such as temperature, oxygen concentration, coolant velocity, and etc. Meanwhile, the formation of the oxide layer also changes the thermal–hydraulic characteristics and neutronics parameters of the reactor core. Historically, there has been a lack of research on the coupling effects of neutronics-thermal-hydraulics-materials (N-TH-M) under oxidation-corrosion conditions. In this paper, an N-TH-M multi-physics fields coupling framework was developed to study the key coupling parameters and oxidation corrosion characteristics of an LFR fuel assembly. The results indicate that the formation of the double oxide layer deteriorates the heat transfer between LBE/cladding, which results in the increases of 17.51 K and 10.04 K for maximum temperatures of fuel and cladding under the high oxygen concentration condition. The outer magnetite layer is severely dissolved by flowing LBE, while the inner Fe-Cr spinel layer exhibits good −dissolution resistance. The increase in oxygen concentration can inhibit the dissolution of magnetite and increase the thickness of magnetite, resulting in a 71 \% reduction in the average removal thickness and a 5.88 μm increase in the average thickness of the magnetite layer. However, it has no significant effect on Fe-Cr spinel. The rise in coolant inlet temperature has a promoting effect on both the growth and the dissolution of the double oxide layer. With rise of coolant inlet temperature, the growth-promoting effect increases the average thickness of the double oxide layer from 14.11 μm to 27.82 μm. Additionally, the increase in coolant inlet velocity usually has a negative impact on the double oxide layer thickness.},
+	urldate = {2024-11-09},
+	journal = {Nuclear Engineering and Design},
+	author = {Ji, Xu and Liu, Xiaojing and Zhang, Tengfei and He, Hui},
+	month = nov,
+	year = {2024},
+	keywords = {Flow heat transfer, Fuel assembly, Lead-bismuth-cooled fast reactor, Neutronics-thermal-hydraulics-materials coupling, Oxidation corrosion},
+	pages = {113519},
+	file = {ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\WAZY4ULV\\S0029549324006198.html:text/html},
+}
+
+@misc{noauthor_arfcsquirrel_nodate,
+	title = {arfc/squirrel: {A} {MOOSE} library for {Moltres} and {Zapdos}},
+	url = {https://github.com/arfc/squirrel},
+	urldate = {2024-11-09},
+	file = {arfc/squirrel\: A MOOSE library for Moltres and Zapdos:C\:\\Users\\Sun Myung\\Zotero\\storage\\T74WCFJU\\squirrel.html:text/html},
 }
